--- a/square-wars/src/component/game.css
+++ b/square-wars/src/component/game.css
@@ -18,7 +18,7 @@
     margin-top: 20px;
     border-radius: 5%;
     border: 5px solid black;
-    background-color: rgb(197, 78, 78);
+    background-color:grey;
     display: flex;
     flex-direction: row;
     text-align: center;
@@ -28,7 +28,7 @@
     width: 45%;
     height: 70vh;
     border: 5px solid black;
-    background-color: brown;
+    background-color:crimson;
     border-radius: 5%;
     margin: auto;
     align-items: center;
@@ -54,6 +54,7 @@
     animation-name: updown;
     animation-duration: 2s;
     animation-delay: 2s;
+    font-weight: bolder;
 }
 @keyframes updown {
     0%   {background-color:red; left:0px; top:0px;}
